Improvements:
- Added a `keys` member to `inpzstream` so it is possible to query the keys of the tensors